<resources>
    <string name="app_name">SmartU</string>
    <!--Instrucciones de la app-->
    <string name="descripcion_instrucciones_main">En la página principal encontrará una barra de navegación para moverse entre el muro, el mapa y los proyectos, notificaciones, comentarios y usuarios de las areas que tenga en misIntereses.</string>
    <string name="descripcion_instrucciones_filtro">El botón flotante circular que se encuentra abajo a la derecha le permitirá filtrar el contenido que está visualizando en su muro, por notificaciones, comentarios, usuarios y proyectos</string>
    <string name="descripcion_instrucciones_elemento">Los elementos del muro como proyectos o usuarios están enlazados a su elemento con más información, puede pulsar en la descripción en el título o en la imágen del mismo para ver más información</string>
    <string name="descripcion_instrucciones_buenaidea">Los usuarios disponen de un botón por el cual se les puede seguir, por lo que recibirá notificaciones de los mismos y los proyectos tienen un botón en forma de lámpara que será equivalente a Me Gusta de Facebook</string>
    <string name="descripcion_instrucciones_informacion">Un nombreUsuario y un proyecto disponen de un menú propio por el que podrá navegar, entre sus archivos, su localización, los integrantes del proyecto o proyectos asociados en el caso de usuarios</string>
    <string name="descripcion_instrucciones_comentarios">Si usted está registrado, podrá ahcer comentarios en los proyectos, podrá enviar mensajes a los integrantes de sus proyectos y podrá darle a BuenaIdea y a seguir un nombreUsuario, a parte recibirá notificaciones de las áres de un proyecto que elija, por ejemplo Informática.</string>
    <string name="descripcion_instrucciones_menu">Pulsando en el icono del menú en la esquina superior izquierda o deslizando el dedo desde el lateral izquierdo hacia el centro de la pantalla podrás abrir el menú lateral en cualquier sección de la aplicación.</string>
    <string name="descripcion_instrucciones_chat">La mensajería instántanea es similar a la de la aplicación Whatsapp, dispone de un campo de texto para rellenar un botón de enviar y un botón para adjuntar imágenes.</string>
    <string name="instructions_description">Instrucciones. Opción para volver a visualizar las instrucciones de la aplicación. Botón.</string>
    <string name="menu_main">Menú principal</string>
    <!-- Titulos de activities-->
    <string name="title_activity_login">Inicia Sesión</string>
    <string name="title_activity_main">Muro</string>
    <string name="title_activity_bottom_navigation">Menu de pestañas</string>

    <!-- Strings relacionados con el login -->
    <string name="prompt_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="btn_login">INICIA SESIÓN</string>
    <string name="action_inicia_sesion_corto">Inicia Sesión</string>
    <string name="error_email_incorrecto">El email es incorrecto</string>
    <string name="error_password_incorrecto">La contraseña es incorrecta</string>
    <string name="error_campo_obligatorio">Campo obligatorio</string>

    <string name="menu_lateral">Menú lateral</string>
    <string name="openDrawer">Abrir Menu lateral</string>
    <string name="closeDrawer">Cerrar Menu lateral</string>

    <string name="action_settings">Opciones</string>

    <string name="muro">Muro</string>
    <string name="muro_filtro_geografico">Mapa</string>
    <string name="muro_filtro_interes">Intereses</string>
    <string name="nuevo_comentario">Nuevo comentario</string>
    <string name="no_seguir">Dejar de seguir</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_proyecto">ProyectoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="idProyecto">Proyecto</string>
    <string name="integrantes">Integrantes</string>
    <string name="multimedia">Multimedia</string>
    <string name="areas">Areas</string>
    <string name="descripcion">Descripción</string>
    <string name="status">Status:</string>
    <string name="especialidades">Especialidades:</string>
    <string name="seguir">Seguir</string>
    <string name="solicitado_unio_proyecto">Solicitado</string>
    <string name="descripcion_union">Quiero unirme para estas especialidades: </string>
    <string name="unirse">Unirse</string>
    <string name="comenta">Comenta...</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="perfil">Perfil</string>
    <string name="proyectos">Proyectos</string>
    <string name="areas_interes">Areas de interés</string>
    <string name="title_activity_mensajes">MensajesActivity</string>
    <string name="filtro">Filtro</string>
    <string name="acciones">Acciones</string>
    <string name="informacion">Información</string>
    <string name="elementos">Elementos</string>
    <string name="chat">Mensajería Instantánea</string>
    <string name="reg_strate">Regístrate</string>
    <string name="nombre_de_usuario">Nombre de nombreUsuario</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="eres_colaborador">Eres colaborador</string>
    <string name="avances">Avances</string>
    <string name="title_activity_publicar_avance">PublicarAvanceActivity</string>
    <string name="nombre_del_avance">Nombre del avance</string>
    <string name="descripci_n_del_avance">Descripción del avance</string>
    <string name="adjuntar">Adjuntar</string>

</resources>
