<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="8dp"
    app:cardUseCompatPadding="true"
    app:contentPaddingBottom="8dp"
    app:contentPaddingLeft="@dimen/activity_horizontal_margin"
    app:contentPaddingRight="@dimen/activity_horizontal_margin"
    app:contentPaddingTop="8dp"
    card_view:cardBackgroundColor="@color/cardview_light_background"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="4dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:drawableStart="@drawable/usuario_white"
            android:drawableLeft="@drawable/usuario_white"
            android:id="@+id/nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="nombre"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_usuario"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:src="@drawable/unirse"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/status_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/status"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/status_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="left|center_vertical"
                        android:padding="10dp"
                        android:text="Status"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/especialidad_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/especialidades"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <com.ns.developer.tagview.widget.TagCloudLinkView
                    android:id="@+id/especialidad_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left|center_vertical"
                    android:padding="10dp"
                    app:isDeletable="false"
                    app:tagLayoutColor="@color/colorPrimaryLight"
                    app:tagTextSize="8sp"
                    app:tagTextColor="@color/white" />


            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/boton_seguir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/seguidores_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/seguir_usuario"
                android:layout_toStartOf="@+id/seguir_usuario"
                android:text="10"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <Button
                android:id="@+id/seguir_usuario"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/seguir_accent"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/seguir_accent"
                android:padding="16dp"
                android:text="@string/seguir"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
